--- a/index.html
+++ b/index.html
@@ -5,7 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3-Architects</title>
+    <!-- Css Stylesheet -->
     <link rel="stylesheet" href="/styles/index.css" />
+    <!-- Font Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&family=Poppins:wght@500&family=Work+Sans:ital,wght@0,500;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <!-- Nav-menu section -->
+    <header>
+      <div class="container">
+        <div class="nav-menu">
+          <div><h2>G3 Architects</h2></div>
+          <div class="nav-items">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Login</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- Section-1 Banner Section -->
+      <section class="banner">
+        <div class="banner-container">
+          <div class="banner-content">
+            <h1>
+              Brand New <br />
+              Group of Architects
+            </h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in <br />
+              some form, by injected humour, or randomised words which don't
+              look even
+            </p>
+            <button>Explore More</button>
+          </div>
+          <div class="banner-image">
+            <img src="./images/banner.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
