--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3-Architects</title>
     <!-- Css Stylesheet -->
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <!-- Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -52,6 +52,18 @@
           <div class="banner-image">
             <img src="./images/banner.png" alt="" />
           </div>
+        </div>
+      </section>
+      <!-- Section-2 Team Section -->
+      <section class="Team">
+        <div class="Team-container">
+          <div class="Team-images">
+            <img src="./images/team1.png" alt="" />
+            <img src="./images/team2.png" alt="" />
+            <img src="./images/team3.png" alt="" />
+            <img src="./images/team4.png" alt="" />
+          </div>
+          <div class="team-content"></div>
         </div>
       </section>
     </main>
