--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <!-- Section-1 Banner Section -->
       <section class="banner">
-        <div class="banner-container">
+        <div class="container">
           <div class="banner-content">
             <h1>
               Brand New <br />
@@ -56,14 +56,27 @@
       </section>
       <!-- Section-2 Team Section -->
       <section class="Team">
-        <div class="Team-container">
-          <div class="Team-images">
-            <img src="./images/team1.png" alt="" />
-            <img src="./images/team2.png" alt="" />
-            <img src="./images/team3.png" alt="" />
-            <img src="./images/team4.png" alt="" />
+        <div class="container">
+          <div class="team-info">
+            <div class="Team-images">
+              <img src="./images/team1.png" alt="" />
+              <img src="./images/team2.png" alt="" />
+              <img src="./images/team3.png" alt="" />
+              <img src="./images/team4.png" alt="" />
+            </div>
+            <div class="team-content">
+              <h2>
+                <span class="gray-font">Quick list</span> of Our
+                <span class="orange-font">Features</span>
+              </h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+              </p>
+              <button>Explore More</button>
+            </div>
           </div>
-          <div class="team-content"></div>
         </div>
       </section>
     </main>
