feature list section added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,62 @@
           </div>
         </div>
       </section>
+      <!-- section-3 feature list -->
+      <section class="feature-list">
+        <div class="container">
+          <div class="feature-content">
+            <h2 class="feature-tittle">
+              Features you will <br />
+              love & enjoy
+            </h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the <br />
+              majority have suffered alteration in some form, by injected
+              humour, or <br />
+              randomised words which don't look even
+            </p>
+            <div class="feature-items">
+              <div class="item">
+                <h3>Dexktop & Mobile Version</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="item">
+                <h3>Drag & Drop Builder</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="item">
+                <h3>Awesome Modern Design</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="item">
+                <h3>Super Easy to Edit</h3>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="feature-image B">
+            <img src="/images/architect.png" alt="" />
+          </div>
+        </div>
+        <button class="xp">10+Year Experience</button>
+      </section>
     </main>
   </body>
 </html>
