--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&family=Poppins:wght@500&family=Work+Sans:ital,wght@0,500;1,400;1,500&display=swap"
       rel="stylesheet"
     />
+    <!-- Font awesome link -->
+    <script
+      src="https://kit.fontawesome.com/18e97e51d6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Nav-menu section -->
@@ -55,10 +60,10 @@
         </div>
       </section>
       <!-- Section-2 Team Section -->
-      <section class="Team">
+      <section class="team">
         <div class="container">
           <div class="team-info">
-            <div class="Team-images">
+            <div class="team-images B">
               <img src="./images/team1.png" alt="" />
               <img src="./images/team2.png" alt="" />
               <img src="./images/team3.png" alt="" />
@@ -130,11 +135,156 @@
             </div>
           </div>
           <div class="feature-image B">
-            <img src="/images/architect.png" alt="" />
+            <img src="./images/architect.png" alt="" />
+
+            <!-- Bonus Part -->
+
+            <div class="sticker">
+              <strong>10+Year</strong>
+              <br />
+              <small>Experience</small>
+            </div>
           </div>
         </div>
-        <button class="xp">10+Year Experience</button>
+      </section>
+
+      <!-- Section-4 Fact section -->
+      <section class="fact">
+        <div class="container">
+          <div class="fact-content">
+            <h2>Some Facts</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but <br />
+              the majority have suffered alteration.
+            </p>
+          </div>
+          <div class="fact-boxes">
+            <div class="outer-box">
+              <div class="inner-box">
+                <img src="./images/icons/ribon.png" alt="" />
+                <h3>54</h3>
+                <p>Awards Winnings</p>
+              </div>
+            </div>
+            <div class="outer-box">
+              <div class="inner-box">
+                <img src="./images/icons/projects.png" alt="" />
+                <h3>1458</h3>
+                <p>Project Finished</p>
+              </div>
+            </div>
+            <div class="outer-box">
+              <div class="inner-box">
+                <img src="./images/icons/customers.png" alt="" />
+                <h3>590</h3>
+                <p>Clients Worked</p>
+              </div>
+            </div>
+            <div class="outer-box">
+              <div class="inner-box">
+                <img src="./images/icons/email.png" alt="" />
+                <h3>22578</h3>
+                <p>
+                  <span class="white">--</span>Email Send
+                  <span class="white">--</span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Section-5 Sponsors section -->
+      <section class="sponsors">
+        <div class="container">
+          <div class="sponsors-content">
+            <h2>Our Sponspors</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,<br />
+              but the majority have suffered alteration.
+            </p>
+          </div>
+          <div class="logo">
+            <img src="./images/sponsors/spotify.png" alt="" />
+            <img src="./images/sponsors/amazon.png" alt="" />
+            <img src="./images/sponsors/google.png" alt="" />
+            <img src="./images/sponsors/telerama.png" alt="" />
+            <img src="./images/sponsors/figma.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- Section-6 contact us [Extra] -->
+      <section class="contact-us">
+        <div class="container">
+          <h2>Let's Get In Touch</h2>
+          <div class="contact-content">
+            <div class="contact-form">
+              <div style="max-width: 800px">
+                <h3 class="contact-tittle">MESSAGE</h3>
+                <form action="">
+                  <div class="form-input-section-1">
+                    <input
+                      type="text"
+                      id="fname"
+                      name="full-name"
+                      placeholder="Full Name"
+                    />
+                    <input
+                      type="email"
+                      id="email"
+                      name="email"
+                      placeholder="Email Address"
+                    />
+                  </div>
+                  <textarea
+                    id="subject"
+                    name="subject"
+                    placeholder="Message"
+                  ></textarea>
+                  <button>SUBMIT</button>
+                </form>
+              </div>
+            </div>
+            <div class="contact-info">
+              <h3>OUR CONTACT</h3>
+              <div class="contact-item">
+                <div class="contact-info-icon">
+                  <img src="./images/icons/social_icons/email.png" alt="" />
+                </div>
+                <div class="contact-info-detail">
+                  <h4 class="">Email Address</h4>
+                  <p class="">1234abs@gmail.com</p>
+                </div>
+              </div>
+              <div class="contact-item">
+                <div class="contact-info-icon">
+                  <img
+                    src="./images/icons/social_icons/telephone-fill.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="contact-info-detail">
+                  <h4 class="">Call Us</h4>
+                  <p class="">+88 01234 567 890</p>
+                </div>
+              </div>
+
+              <h3 style="margin-bottom: 30px">SOCIAL MEDIA</h3>
+              <div class="social-media-icons fa-lg">
+                <i class="fa-brands fa-facebook-f fa-lg"></i>
+                <i class="fa-brands fa-whatsapp fa-lg"></i
+                ><i class="fa-brands fa-instagram fa-lg"></i>
+                <i class="fa-brands fa-twitter fa-lg"></i>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+    <footer>
+      <div class="container">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+      </div>
+    </footer>
   </body>
 </html>
