responsive issue fixed

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <img src="./images/icons/email.png" alt="" />
                 <h3>22578</h3>
                 <p>
-                  <span class="white">--</span>Email Send
+                  <span class="white">--</span>Email Sent
                   <span class="white">--</span>
                 </p>
               </div>
